SimpleComplex/Locale 2.x, 2018-06-25
------------------------------------
- Fixed that CLI didn't know that global config localeTextPaths are relative
  to the vendor dir.
- Support that an localeTextPaths item is an absolute path.
- Release 2.0.1.

SimpleComplex/Locale 2.x, 2018-06-24
------------------------------------
- Config localeTextPaths are now relative to vendor dir (not document root);
  thus new major version because will break stuff for existing users.
- No longer sorts localeTextPaths to allow applications to override common
  translations by using alphanerically 'late' paths. Because that strategy is
  horrid (Drupal7esque). And ordering packages' config .ini files by vendor
  is a fine strategy; supported since Config 2.0.
- Release 2.0.

SimpleComplex/Locale 1.x, 2018-06-24
------------------------------------
- CLI locale-text-refresh options allow-none and verbose.

SimpleComplex/Locale 1.x, 2017-12-07
------------------------------------
- CLI locale-text-set do check for missing value argument.

SimpleComplex/Locale 1.x, 2017-10-10
------------------------------------
- Allow long keys; 128 instead of 64 chars.
- Release 1.1.

SimpleComplex/Locale 1.x, 2017-09-24
------------------------------------
- Release 1.0.

SimpleComplex/Locale 1.x, 2017-09-22
------------------------------------
- Locale-text no longer risk that dupe key string values become array.
  Removed warnings from documentation.

SimpleComplex/Locale 1.x, 2017-09-03
------------------------------------
- Locale text() 'default' parameter.

SimpleComplex/Locale 1.x, 2017-08-24
------------------------------------
- CLI commands must respect new command 'silent' property.
- CLI 'get' command default to print instead default to return the value.

SimpleComplex/Locale 1.x, 2017-08-23
------------------------------------
- Sort text ini file paths, to allow predictable override of common texts.

SimpleComplex/Locale 1.x, 2017-08-11
------------------------------------