@@ -1,3 +1,9 @@
+SimpleComplex/Locale 2.x, 2018-07-28
+------------------------------------
+- Register CLI command provider in document root .ini file.
+  And don't provide own cli.phpsh; rely on the Utils' package's generic
+  cli.phpsh.
+
 SimpleComplex/Locale 2.x, 2018-06-25
 ------------------------------------
 - Fixed that CLI didn't know that global config localeTextPaths are relative
